FIX: about 文字不可见

--- a/layouts/partials/sections/about.html
+++ b/layouts/partials/sections/about.html
@@ -99,10 +99,10 @@
           </div>
           {{/* ~Hack to add space outside (shorter right) */}}
 {{/*
-          <div class="col-xs-12 col-md-{{ sub $main_side 1 }} text-tertiary long-text">
+          <div class="col-xs-12 col-md-{{ sub $main_side 1 }} text-primary long-text">
 */}}
           <div class="col-xs-12 col-md-offset-{{ $offset_center }} col-md-{{ $main_side }}">
-            <div class="text-tertiary long-text">
+            <div class="text-primary long-text">
             <p>{{ .long_text | markdownify }}</p>
             </div>
           </div>
@@ -110,7 +110,7 @@
             <div>
               <p></p>
             </div>
-            <div class="text-tertiary long-text">
+            <div class="text-primary long-text">
               <p>{{ .long_text | markdownify }}</p>
             </div>
           </div>
